--- a/scripts/Neighbourhoods-Toronto.ipynb
+++ b/scripts/Neighbourhoods-Toronto.ipynb
@@ -557,7 +557,9 @@
    "cell_type": "code",
    "execution_count": 13,
    "id": "899bc3ad-be98-4397-8e85-f2d2e1f39645",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# function that extracts the category of the venue\n",
@@ -577,7 +579,12 @@
    "cell_type": "code",
    "execution_count": 14,
    "id": "9022dfa9-c42c-4283-b0df-0dc7f5f4b068",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "CLIENT_ID = 'ZND133FS1T01EY4UD52IT5SKKR3LHXOZWFVC4T5SIUGDVGRG' # your Foursquare ID\n",
@@ -589,7 +596,9 @@
   {
    "cell_type": "markdown",
    "id": "71355781-4c40-4746-9eca-af830c96ebac",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "Use the function from the NY example to explore all boroughs in Toronto"
    ]
