--- a/scripts/Berlin.ipynb
+++ b/scripts/Berlin.ipynb
@@ -31,7 +31,9 @@
    "source": [
     "The data I intend to use to help me complete this task includes:\n",
     " - **Foursquare's** geolocation data of Berlin's amenities\n",
-    " - **Immo scout's** rental prices for cities across Germany"
+    " - **Immo scout's** rental prices for cities across Germany\n",
+    " - **Geospatial** coordinates for the boroughs of Berlin\n",
+    " - My wife and my preferences for nearby **amenities**"
    ]
   },
   {
