--- a/scripts/Berlin.ipynb
+++ b/scripts/Berlin.ipynb
@@ -30,10 +30,10 @@
    "metadata": {},
    "source": [
     "The data I intend to use to help me complete this task includes:\n",
-    " - **Foursquare's** geolocation data of Berlin's amenities\n",
-    " - **Immo scout's** rental prices for cities across Germany\n",
-    " - **Geospatial** coordinates for the boroughs of Berlin\n",
-    " - My wife and my preferences for nearby **amenities**"
+    " - **Foursquare's** geolocation data of Berlin's amenities - this will help to quantify the number of amenities in each of the Berlin boroughs\n",
+    " - **Immo scout's** rental prices for cities across Germany - this will provide rent per sqm in order to make comparisons between the Berlin boroughs\n",
+    " - **Geospatial** coordinates for the boroughs of Berlin - this will enable me to see the locations on a folium map\n",
+    " - My wife and my preferences for nearby **amenities** - to help indicate which boroughs contain the density of amenities we are seeking"
    ]
   },
   {
